@startuml
class Direction{
{field} ID
{field} localisation
{field} pays
{field} phone
{field} email
}

class Proforma{
{field} ID: int
{field} reference: string
{field} compte: string
}

class Client{
{field} id: int
{field} libelle: string
{field} phone: string
}

class CategoryClient{
{field} id: int
{field} libelle
}

class BonSortie{
{field} Etat{edition, enCours, validé }
{field}  montant: float
}

class BonLivraison{
{field}  id: int
{field}  dateLivraison: DateOnly
{field} montant: float
{field}  expedition: String
}

class Facture {
    {field} id: int,
    {field} reference: string
    {field} etat: {enAttente, Terminer}
}

class DetailsBonSortie{
{field}  ArticleId: int
{field}  prixUnitaire: float
{field}  qte: int
{field}  montant: float
}

class DetailsBonLivraison{
{field}  ArticleId: int
{field}  prixUnitaire: float
{field}  qte: int
{field}  montant: float
}




class DetailsDons{
{field}  ArticleId: int
{field}  prixUnitaire: float
{field}  qte: int
{field}  montant: float
}

class Article{
{field} reference: string
{field} designation: string
}

Class Stock {

}



DetailsBonLivraison "many" --> "one" BonLivraison
DetailsBonLivraison "many" --> "one" Article
BonLivraison "many" --> "one" Client
BonLivraison "one" --> "one" BonSortie

BonSortie "many" --> "one" Direction

DetailsBonSortie "many" --> "one" BonSortie
DetailsBonSortie "many" --> "one" Article

DetailsDons "many" --> "one" Article



Stock "many" --> "one" Article
Stock "many" --> "one" Direction

Facture "one" --> "many" Article
Facture "many" --> "one" Client
Facture "many" --> "one" Direction

Proforma "many" --> "one" Direction
Proforma "many" --> "one" Client
Proforma "many" --> "many" Article


Client "many" --> "one" CategoryClient


@enduml